# LFSDesktopProject

./: .gitignore  BUGS-ETC  ChangeLog  Makefile.am  Makefile.in  News  README  README.md  TODO  autogen.sh  buildall  cleanrepo  config.h.in  configure  configure.ac  debug.h  filestoopen  makeall  purgeall  remakesourcelist  svn-ignore.txt  xinitrc.sample
KKEditQT/app/: Makefile.am  Makefile.in
LFSApplications/: ChangeLog  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac  lfsapplications.mpz
LFSApplications/LFSApplications/: flagsandlibs
LFSApplications/LFSApplications/app/: Makefile.am  Makefile.in  apps.local
LFSApplications/LFSApplications/resources/: lfsdesktop.desktop  lfslaunchpanels  startlfsdesktop
LFSApplications/LFSApplications/src/: lfsabout.cpp  lfsappearance.cpp  lfsbackdropprefs.cpp  lfscolourchooser.cpp  lfsdesktopprefs.cpp  lfsdockprefs.cpp  lfsfilechooser.cpp  lfsfontselect.cpp  lfsmimeeditor.cpp  lfspanelprefs.cpp  lfsruncommand.cpp  lfstkprefs.cpp  lfstrayprefs.cpp  lfswm2prefs.cpp  lfswmprefs.cpp
LFSDesktop/: ChangeLog  Makefile.am  Makefile.in  SetPrefsFromXFConf  config.h.in  configure  configure.ac  lfsdesktop.mpz  remakesourcelist
LFSDesktop/LFSDesktop/: flagsandlibs  sources
LFSDesktop/LFSDesktop/app/: Makefile.am  Makefile.in
LFSDesktop/LFSDesktop/helper/: Makefile.am  Makefile.in  lfshelper.cpp
LFSDesktop/LFSDesktop/src/: callbacks.cpp  callbacks.h  disks.cpp  disks.h  files.cpp  files.h  globals.cpp  globals.h  graphics.h  main.cpp  prefs.cpp  prefs.h
LFSDock/: ChangeLog  Makefile.am  README.md  configure.ac  lfsdock.mpz  remakesourcelist
LFSDock/LFSDock/: flagsandlibs  sources
LFSDock/LFSDock/app/: Makefile.am  lfsdock.local
LFSDock/LFSDock/src/: calendar.cpp  calendar.h  callbacks.cpp  callbacks.h  clock.cpp  clock.h  desktopSwitcher.cpp  desktopSwitcher.h  globals.cpp  globals.h  launchers.cpp  launchers.h  main.cpp  slider.cpp  slider.h  taskBar.cpp  taskBar.h
LFSPanel/: ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  lfspanel.mpz  remakesourcelist
LFSPanel/LFSPanel/: flagsandlibs  sources
LFSPanel/LFSPanel/app/: Makefile.am  Makefile.in
LFSPanel/LFSPanel/src/: appmenu.cpp  appmenu.h  callbacks.cpp  callbacks.h  clock.cpp  clock.h  cpu.cpp  cpu.h  disks.cpp  disks.h  globals.cpp  globals.h  launchers.cpp  launchers.h  logout.cpp  logout.h  main.cpp  slider.cpp  slider.h  windowlist.cpp  windowlist.h
LFSSetWallpaper/: ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  lfssetwallpaper.mpz  remakesourcelist
LFSSetWallpaper/LFSSetWallpaper/: flagsandlibs
LFSSetWallpaper/LFSSetWallpaper/app/: Makefile.am  Makefile.in
LFSSetWallpaper/LFSSetWallpaper/src/: main.cpp
LFSToolKit/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  lfstk.pc.in  ltmain.sh  remakesourcelist
LFSToolKit/HOLD/: LFSTKFontButton.cpp
LFSToolKit/LFSToolKit/: flagsandlibs  sources
LFSToolKit/LFSToolKit/app/: Makefile.am  Makefile.in
LFSToolKit/LFSToolKit/lfstk/: ChooserDialog.cpp  ChooserDialog.h  Doxyfile  FindClass.cpp  FindClass.h  LFSTKApplication.cpp  LFSTKApplication.h  LFSTKButton.cpp  LFSTKButton.h  LFSTKExpanderGadget.cpp  LFSTKExpanderGadget.h  LFSTKFileDialog.cpp  LFSTKFileDialog.h  LFSTKFindClass.cpp  LFSTKFindClass.h  LFSTKFontButton.cpp  LFSTKFontButton.h  LFSTKFontDialog.cpp  LFSTKFontDialog.h  LFSTKGadget.cpp  LFSTKGadget.h  LFSTKGlobals.h  LFSTKImage.cpp  LFSTKImage.h  LFSTKLabel.cpp  LFSTKLabel.h  LFSTKLib.cpp  LFSTKLib.h  LFSTKLineEdit.cpp  LFSTKLineEdit.h  LFSTKListGadget.cpp  LFSTKListGadget.h  LFSTKMenu.cpp  LFSTKMenu.h  LFSTKMenuButton.cpp  LFSTKMenuButton.h  LFSTKMenuItem.cpp  LFSTKMenuItem.h  LFSTKMenuList.cpp  LFSTKMenuList.h  (+19 more)
LFSToolKit/devtests/: README  memleak1.cpp  parsedesktopfile.cpp  readfromfile.cpp  replaceall.cpp  setdesknames.cpp  varvar.cpp
LFSToolKit/docs/: Doxyfile.in  Makefile.am  Makefile.in
LFSToolKit/examples/: PrefsTest.cpp  RunExamples  RunExamples.cpp  aboutbox.cpp  appMenu.cpp  basic.cpp  basicmenu.cpp  calander.cpp  colorchooser.cpp  colourchooser.cpp  dialogs.cpp  expander.cpp  fontdialog.cpp  gadgets.cpp  geticonpath.cpp  image.cpp  imagebutton.cpp  lfsabout.cpp  lfsruncommand.cpp  lineedit.cpp  list.cpp  menus.cpp  multigadget.cpp  multilineedit.cpp  newmenutest.cpp  openincurrent  prefs.cpp  querybox.cpp  runcommand.cpp  scrollbar.cpp  submenus.cpp  subwindowtest.cpp  testprefs.rc  toggle.cpp  window.cpp
LFSTray/: ChangeLog  Makefile.am  README.md  TODO  autogen.sh  configure.ac  lfstray.sample.in  remakesourcelist  sample_prefs.rc
LFSTray/LFSTray/: flagsandlibs  sources
LFSTray/LFSTray/app/: Makefile.am
LFSTray/LFSTray/src/: Makefile.am  callbacks.cpp  callbacks.h  embed.cpp  embed.h  embedClass.cpp  embedClass.h  globals.cpp  globals.h  icons.c  icons.cpp  icons.h  image.cpp  image.h  layout.c  layout.cpp  list.h  main.cpp  settings.c  settings.cpp  settings.h  tray.cpp  tray.h  trayClass.cpp  trayClass.h  wmh.cpp  wmh.h  xembed.cpp  xembed.h  xutils.cpp  xutils.h
LFSTray/src/: common.h  embed.c  image.c  layout.h  tray.c  tray.h  wmh.c  xembed.c  xutils.h
LFSWM2/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  filestoopen  remakesourcelist
LFSWM2/LFSWM2/: flagsandlibs  sources
LFSWM2/LFSWM2/app/: Makefile.am  Makefile.in  lfswm2.local
LFSWM2/LFSWM2/src/: clientClass.cpp  clientClass.h  eventsClass.cpp  eventsClass.h  globals.cpp  globals.h  lfswm2Class.cpp  lfswm2Class.h  main.cpp  messageClass.cpp  messageClass.h  windowsClass.cpp  windowsClass.h
LFSWManager/: ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  lfswmanager.mpz  remakesourcelist
LFSWManager/LFSWManager/: flagsandlibs  sources
LFSWManager/LFSWManager/app/: Makefile.am  Makefile.in
LFSWManager/LFSWManager/helper/: Makefile.in  appMenu.cpp
LFSWManager/LFSWManager/src/: appmenu.cpp  appmenu.h  atoms.cpp  atoms.h  button.cpp  button.h  client.cpp  client.h  debug.h  deleven.xbm  delodd.xbm  (+26 more)
(+2142 files in other folders)
