#
#
AC_INIT([KKEditQT],[0.0],[PROJ],[KKEditQT])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

CXXFLAGS=-Wall
AC_SUBST(CXXFLAGS)

CFLAGS=-Wall
AC_SUBST(CFLAGS)

QT_MODULES="Qt5Gui >= .2.1"
PKG_CHECK_MODULES(QT, $QT_MODULES)
AC_SUBST(QT_CFLAGS)
AC_SUBST(QT_LIBS)

QTWIDGETS_MODULES="Qt5Widgets >= 5.2.1"
PKG_CHECK_MODULES(QTWIDGETS, $QTWIDGETS_MODULES)
AC_SUBST(QTWIDGETS_CFLAGS)
AC_SUBST(QTWIDGETS_LIBS)

AC_OUTPUT(Makefile KKEditQT/app/Makefile)

