#
#
AC_INIT([LFSApplications],[0.1.1],[PROJ],[LFSPanel])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

XFT_MODULES="xft >= 2.3.1"
PKG_CHECK_MODULES(XFT, $XFT_MODULES)
AC_SUBST(XFT_CFLAGS)
AC_SUBST(XFT_LIBS)

IMLIB_MODULES="imlib2 >= 1.4.6"
PKG_CHECK_MODULES(IMLIB, $IMLIB_MODULES)
AC_SUBST(IMLIB_LIBS)
AC_SUBST(IMLIB_CFLAGS)

AC_OUTPUT(Makefile LFSPanel/app/Makefile)

