
AC_INIT([SetLFSWalpaper],[0.1.0],[LFSSetWallpaper],[LFSSetWallpaper])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_LIBS)
AC_SUBST(X11_CFLAGS)

XINERAMA_MODULES="xinerama >= 1.1.3"
PKG_CHECK_MODULES(XINERAMA, $XINERAMA_MODULES)
AC_SUBST(XINERAMA_LIBS)
AC_SUBST(XINERAMA_CFLAGS)

IMLIB_MODULES="imlib2 >= 1.4.6"
PKG_CHECK_MODULES(IMLIB, $IMLIB_MODULES)
AC_SUBST(IMLIB_LIBS)
AC_SUBST(IMLIB_CFLAGS)

AC_OUTPUT(Makefile LFSSetWallpaper/app/Makefile)

