AC_INIT([LFSTray],[1.0.4],[PROJ],[LFSTray])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE
AC_PROG_CC

dnl ============= X11 ================

X11_MODULES="x11 >= 1.6.0"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

dnl ============= X11 ================

CAIRO_MODULES="cairo >= 1.12.16"
PKG_CHECK_MODULES(CAIRO, $CAIRO_MODULES)
AC_SUBST(CAIRO_LIBS)
AC_SUBST(CAIRO_CFLAGS)

LIBGLIB_MODULES="glib-2.0 >= 2.60.0"
PKG_CHECK_MODULES(LIBGLIB, $LIBGLIB_MODULES)
AC_SUBST(LIBGLIB_LIBS)
AC_SUBST(LIBGLIB_CFLAGS)

LFSTK_MODULES="lfstk >= 0.6.1"
PKG_CHECK_MODULES(LFSTK, $LFSTK_MODULES)
AC_SUBST(LFSTK_LIBS)
AC_SUBST(LFSTK_CFLAGS)

#IMLIB_MODULES="imlib2 >= 1.4.6"
#PKG_CHECK_MODULES(IMLIB, $IMLIB_MODULES)
#AC_SUBST(IMLIB_LIBS)
#AC_SUBST(IMLIB_CFLAGS)

AC_CONFIG_FILES([Makefile LFSTray/app/Makefile])
AC_OUTPUT

