#
#
AC_INIT([LFSWM2],[0.2.5],[PROJ],[LFSWM2])

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE
AC_PROG_CXX

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

XINERAMA_MODULES="xinerama >= 1.1.3"
PKG_CHECK_MODULES(XINERAMA, $XINERAMA_MODULES)
AC_SUBST(XINERAMA_LIBS)
AC_SUBST(XINERAMA_CFLAGS)

XFT_MODULES="xft >= 2.3.1"
PKG_CHECK_MODULES(XFT, $XFT_MODULES)
AC_SUBST(XFT_CFLAGS)
AC_SUBST(XFT_LIBS)

XRENDER_MODULES="xrender >= 0.9.10"
PKG_CHECK_MODULES(XRENDER, $XRENDER_MODULES)
AC_SUBST(XRENDER_CFLAGS)
AC_SUBST(XRENDER_LIBS)

#XCOMPOSITE_MODULES="xcomposite >= 0.4.5"
#PKG_CHECK_MODULES(XCOMPOSITE, $XCOMPOSITE_MODULES)
#AC_SUBST(XCOMPOSITE_CFLAGS)
#AC_SUBST(XCOMPOSITE_LIBS)

#XSHMFENCE_MODULES="xshmfence >= 1.3"
#PKG_CHECK_MODULES(XSHMFENCE, $XSHMFENCE_MODULES)
#AC_SUBST(XSHMFENCE_CFLAGS)
#AC_SUBST(XSHMFENCE_LIBS)
#
#XEXT_MODULES="xext >= 1.3.4"
#PKG_CHECK_MODULES(XEXT, $XEXT_MODULES)
#AC_SUBST(XEXT_CFLAGS)
#AC_SUBST(XEXT_LIBS)

LFSTK_MODULES="lfstk >= 0.5.1"
PKG_CHECK_MODULES(LFSTK, $LFSTK_MODULES)
AC_SUBST(LFSTK_LIBS)
AC_SUBST(LFSTK_CFLAGS)

AC_SUBST(CXXFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_CONFIG_FILES(Makefile LFSWM2/app/Makefile)
AC_OUTPUT

