
AC_INIT([LFSWManager],[0.1.1],[PROJ],[LFSWManager])

AC_CONFIG_HEADER([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC

XEXT_MODULES="xext >= 1.3.2"
PKG_CHECK_MODULES(XEXT, $XEXT_MODULES)
AC_SUBST(XEXT_CFLAGS)
AC_SUBST(XEXT_LIBS)

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

XCOMPOSITE_MODULES="xcomposite >= 0.4.4"
PKG_CHECK_MODULES(XCOMPOSITE, $XCOMPOSITE_MODULES)
AC_SUBST(XCOMPOSITE_CFLAGS)
AC_SUBST(XCOMPOSITE_LIBS)

XDAMAGE_MODULES="xdamage >= 1.1.4"
PKG_CHECK_MODULES(XDAMAGE, $XDAMAGE_MODULES)
AC_SUBST(XDAMAGE_CFLAGS)
AC_SUBST(XDAMAGE_LIBS)

XRENDER_MODULES="xrender >= 0.9.8"
PKG_CHECK_MODULES(XRENDER, $XRENDER_MODULES)
AC_SUBST(XRENDER_CFLAGS)
AC_SUBST(XRENDER_LIBS)

XFIXES_MODULES="xfixes >= 5.0.1"
PKG_CHECK_MODULES(XFIXES, $XFIXES_MODULES)
AC_SUBST(XFIXES_CFLAGS)
AC_SUBST(XFIXES_LIBS)

XFT_MODULES="xft >= 2.3.1"
PKG_CHECK_MODULES(XFT, $XFT_MODULES)
AC_SUBST(XFT_CFLAGS)
AC_SUBST(XFT_LIBS)

XINERAMA_MODULES="xinerama >= 1.1.3"
PKG_CHECK_MODULES(XINERAMA, $XINERAMA_MODULES)
AC_SUBST(XINERAMA_LIBS)
AC_SUBST(XINERAMA_CFLAGS)

CAIRO_MODULES="cairo >= 1.12.16"
PKG_CHECK_MODULES(CAIRO, $CAIRO_MODULES)
AC_SUBST(CAIRO_LIBS)
AC_SUBST(CAIRO_CFLAGS)

IMLIB_MODULES="imlib2 >= 1.4.6"
PKG_CHECK_MODULES(IMLIB, $IMLIB_MODULES)
AC_SUBST(IMLIB_LIBS)
AC_SUBST(IMLIB_CFLAGS)

AC_ARG_WITH(debug_level,AS_HELP_STRING([--with-debug-level],[Debug level ( 0,1 )]),
    [with_debug_level=$withval],
    [with_debug_level=0])
AC_SUBST(with_debug_level)
AC_MSG_RESULT([Setting debug level to $with_debug_level])

AC_OUTPUT(Makefile LFSWManager/app/Makefile LFSWManager/helper/Makefile)

