
AC_INIT([LFSWManager],[0.1.3],[PROJ],[LFSWManager])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC

XEXT_MODULES="xext >= 1.3.2"
PKG_CHECK_MODULES(XEXT, $XEXT_MODULES)
AC_SUBST(XEXT_CFLAGS)
AC_SUBST(XEXT_LIBS)

X11_MODULES="x11 >= 1.6.2"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_CFLAGS)
AC_SUBST(X11_LIBS)

XCOMPOSITE_MODULES="xcomposite >= 0.4.4"
PKG_CHECK_MODULES(XCOMPOSITE, $XCOMPOSITE_MODULES)
AC_SUBST(XCOMPOSITE_CFLAGS)
AC_SUBST(XCOMPOSITE_LIBS)

XDAMAGE_MODULES="xdamage >= 1.1.4"
PKG_CHECK_MODULES(XDAMAGE, $XDAMAGE_MODULES)
AC_SUBST(XDAMAGE_CFLAGS)
AC_SUBST(XDAMAGE_LIBS)

XRENDER_MODULES="xrender >= 0.9.8"
PKG_CHECK_MODULES(XRENDER, $XRENDER_MODULES)
AC_SUBST(XRENDER_CFLAGS)
AC_SUBST(XRENDER_LIBS)

XFIXES_MODULES="xfixes >= 5.0.1"
PKG_CHECK_MODULES(XFIXES, $XFIXES_MODULES)
AC_SUBST(XFIXES_CFLAGS)
AC_SUBST(XFIXES_LIBS)

XFT_MODULES="xft >= 2.3.1"
PKG_CHECK_MODULES(XFT, $XFT_MODULES)
AC_SUBST(XFT_CFLAGS)
AC_SUBST(XFT_LIBS)

XINERAMA_MODULES="xinerama >= 1.1.3"
PKG_CHECK_MODULES(XINERAMA, $XINERAMA_MODULES)
AC_SUBST(XINERAMA_LIBS)
AC_SUBST(XINERAMA_CFLAGS)

CAIRO_MODULES="cairo >= 1.12.16"
PKG_CHECK_MODULES(CAIRO, $CAIRO_MODULES)
AC_SUBST(CAIRO_LIBS)
AC_SUBST(CAIRO_CFLAGS)

IMLIB_MODULES="imlib2 >= 1.4.6"
PKG_CHECK_MODULES(IMLIB, $IMLIB_MODULES)
AC_SUBST(IMLIB_LIBS)
AC_SUBST(IMLIB_CFLAGS)

LFSTK_MODULES="lfstk >= 0.6.0"
PKG_CHECK_MODULES(LFSTK, $LFSTK_MODULES)
AC_SUBST(LFSTK_LIBS)
AC_SUBST(LFSTK_CFLAGS)

LIBGLIB_MODULES="glib-2.0 >= 2.60.0"
PKG_CHECK_MODULES(LIBGLIB, $LIBGLIB_MODULES)
AC_SUBST(LIBGLIB_LIBS)
AC_SUBST(LIBGLIB_CFLAGS)

AC_MSG_CHECKING(whether to build dbug functions)
AC_ARG_ENABLE(debug,AS_HELP_STRING([--enable-debug],[Enable debug code]),
    [enable_debug=$enableval],
    [enable_debug="no"])
AC_MSG_RESULT($enable_debug)
if test "$enable_debug" = "yes"; then
	AC_DEFINE([_ENABLEDEBUG_], [], [Enable debug code])
fi

AC_CONFIG_FILES([Makefile LFSWManager/app/Makefile])
AC_OUTPUT

