AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs

lfstkprefs_SOURCES = ../src/lfstkprefs.cpp

lfswmprefs_SOURCES = ../src/lfswmprefs.cpp

lfsdesktopprefs_SOURCES = ../src/lfsdesktopprefs.cpp

lfsappearance_SOURCES = ../src/lfsappearance.cpp

lfsbackdropprefs_SOURCES = ../src/lfsbackdropprefs.cpp

lfspanelprefs_SOURCES = ../src/lfspanelprefs.cpp

lfsabout_SOURCES = ../src/lfsabout.cpp

lfsruncommand_SOURCES = ../src/lfsruncommand.cpp

man1_MANS = ../resources/man/lfsapplications.1

bin_PROGRAMS = lfstkprefs lfswmprefs lfsdesktopprefs lfsappearance lfsbackdropprefs lfspanelprefs lfsabout lfsruncommand

