AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs

lfsappearance_SOURCES = ../src/lfsappearance.cpp

lfstkprefs_SOURCES = ../src/lfstkprefs.cpp

lfswmprefs_SOURCES = ../src/lfswmprefs.cpp

lfsdesktopprefs_SOURCES = ../src/lfsdesktopprefs.cpp

lfsbackdropprefs_SOURCES = ../src/lfsbackdropprefs.cpp

lfspanelprefs_SOURCES = ../src/lfspanelprefs.cpp

lfsabout_SOURCES = ../src/lfsabout.cpp

lfsruncommand_SOURCES = ../src/lfsruncommand.cpp

lfsmimeeditor_SOURCES = ../src/lfsmimeeditor.cpp

lfsfontselect_SOURCES = ../src/lfsfontselect.cpp

lfscolourchooser_SOURCES = ../src/lfscolourchooser.cpp

man1_MANS = ../resources/man/lfsapplications.1

bin_PROGRAMS =  lfsappearance lfstkprefs lfswmprefs lfsdesktopprefs lfsbackdropprefs lfspanelprefs lfsabout lfsruncommand lfsmimeeditor lfsfontselect lfscolourchooser
