AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs

lfstkprefs_SOURCES = ../src/lfstkprefs.cpp
lfsappearance_SOURCES = ../src/lfsappearance.cpp
lfsbackdropprefs_SOURCES = ../src/lfsbackdropprefs.cpp
lfsdesktopprefs_SOURCES = ../src/lfsdesktopprefs.cpp
lfspanelprefs_SOURCES = ../src/lfspanelprefs.cpp
lfswm2prefs_SOURCES = ../src/lfswm2prefs.cpp

lfscolourchooser_SOURCES = ../src/lfscolourchooser.cpp
lfsabout_SOURCES = ../src/lfsabout.cpp
lfsfontselect_SOURCES = ../src/lfsfontselect.cpp
lfsruncommand_SOURCES = ../src/lfsruncommand.cpp
lfsmimeeditor_SOURCES = ../src/lfsmimeeditor.cpp

lfswmprefs_SOURCES = ../src/lfswmprefs.cpp










man1_MANS = ../resources/man/lfsapplications.1

#bin_PROGRAMS =    lfswmprefs         
bin_PROGRAMS =   lfstkprefs  lfsappearance lfsbackdropprefs lfsdesktopprefs lfspanelprefs lfswm2prefs lfscolourchooser lfsabout lfsfontselect lfsruncommand lfsmimeeditor lfswmprefs
